<resources>
    <string name="app_name">Sayur In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="item_to_order">Item to Order</string>
    <string name="rp_8_000">Rp. 8.000</string>
    <string name="harga_ikat">Harga / Ikat</string>
    <string name="bayam">Bayam</string>
    <string name="add_note">add note...</string>
    <string name="_8">8</string>
    <string name="todo">TODO</string>
    <string name="google_maps_key">AIzaSyAwsui-1z8KL046mGdee_2jo5EmbVOd884</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama">nama</string>
    <string name="kuantitas_barang">kuantitas barang</string>
    <string name="harga">harga</string>
    <string name="add">Add</string>
    <string name="count_initial_value">0</string>
    <string name="button_label">Send</string>
    <string name="toast_message">Hurra!</string>
    <string name="input_placeholder">Write a message</string>
    <string-array name="kuantitas">
        <item>Gram</item>
        <item>Ikat</item>
        <item>Biji</item>
    </string-array>

    <string-array name="jam">
        <item>06.00 WIB</item>
        <item>07.00 WIB</item>
    </string-array>
</resources>
