<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/cardviewadminlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="9dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/gambar_sayur_admin_list"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/nama_sayur_admin_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kuantitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/kuantitas_barang"
                android:textAlignment="center"
                android:textColor="#808080"
                />

            <TextView
                android:id="@+id/harga_sayur_admin_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />

            <Button
                android:id="@+id/btn_edit_sayur_admin_list"
                android:elevation="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_xml_btn_green"
                android:text="Edit"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_edit_black_24dp"
                android:textColor="#ffffff"
                android:layout_marginTop="15dp"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>