<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Chart">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorFrameBackground"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/item_to_order"
                    android:textColor="@color/colorTextOrange"
                    android:textSize="18sp" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorFrameBackground"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Alamat Pengiriman"
                    android:textColor="@color/colorTextOrange"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/TextView_ubah_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    android:layout_toLeftOf="@+id/buttonpick"
                    android:text="Ubah"
                    android:textColor="#a3a3a3"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttonpick"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_edit_gray_24dp" />
            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorFrameBackground"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/editText2"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_location_on_black_24dp" />

                <TextView
                    android:id="@+id/textView_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/imageView2"
                    android:layout_toRightOf="@+id/imageView2"
                    android:padding="1dp"
                    android:text="Silahkan ubah alamat"
                    android:textColor="@color/colorTextGreen"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="12dp"
                    android:background="@color/colorBackground"
                    android:hint="@string/add_note"
                    android:inputType="textPersonName"
                    android:padding="3dp"
                    android:textSize="12sp"
                    android:textStyle="italic" />

            </RelativeLayout>
            </android.support.v7.widget.CardView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorFrameBackground"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Tanggal dan Waktu Pengiriman"
                    android:textColor="@color/colorTextOrange"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView_ubah_waktu"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp"
                    android:layout_toLeftOf="@+id/buttondatepicker"
                    android:text="Ubah"
                    android:textColor="#a3a3a3"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttondatepicker"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_edit_gray_24dp" />
            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorFrameBackground"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView_hari"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:padding="1dp"
                    android:layout_toLeftOf="@id/spinner_jam"
                    android:text="Pilih tanggal pengiriman"
                    android:layout_marginTop="9dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/colorTextGreen"
                    android:textSize="13sp"
                    />
                <Spinner
                    android:id="@+id/spinner_jam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="45dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:background="@color/colorFrameBackground"-->
                <!--android:padding="10dp">-->

                <!--<TextView-->
                    <!--android:id="@+id/textView9"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginStart="10dp"-->
                    <!--android:text="Metode Pembayaran"-->
                    <!--android:textColor="@color/colorTextOrange"-->
                    <!--android:textSize="18sp" />-->

            <!--</RelativeLayout>-->


            <!--<android.support.v7.widget.CardView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_margin="4dp"-->
                <!--app:cardElevation="3dp"-->
                <!--app:cardUseCompatPadding="true">-->

            <!--<RelativeLayout-->
                <!--android:id="@+id/frameLayout3"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="85dp"-->
                <!--android:layout_marginTop="2dp"-->
                <!--android:background="@color/colorFrameBackground"-->
                <!--android:padding="10dp">-->

                <!--<TextView-->
                    <!--android:id="@+id/TextView_COD"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="31dp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="0dp"-->
                    <!--android:layout_toLeftOf="@id/checkbox1"-->
                    <!--android:padding="1dp"-->
                    <!--android:text="Cash On Delivery (COD)"-->
                    <!--android:textColor="@color/colorTextGreen"-->
                    <!--android:textSize="13sp" />-->

                <!--<CheckBox-->
                    <!--android:id="@+id/checkbox1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_alignParentTop="true"-->
                    <!--android:layout_marginRight="10dp" />-->

                <!--<TextView-->
                    <!--android:id="@+id/editText_transfer"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="31dp"-->
                    <!--android:layout_below="@+id/TextView_COD"-->
                    <!--android:layout_centerHorizontal="true"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_toLeftOf="@id/checkbox2"-->
                    <!--android:padding="1dp"-->
                    <!--android:text="Transfer"-->
                    <!--android:textColor="@color/colorTextGreen"-->
                    <!--android:textSize="13sp" />-->

                <!--<CheckBox-->
                    <!--android:id="@+id/checkbox2"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@+id/TextView_COD"-->
                    <!--android:layout_toRightOf="@+id/TextView_COD" />-->

            <!--</RelativeLayout>-->
            <!--</android.support.v7.widget.CardView>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorFrameBackground"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Detail Pembayaran"
                    android:textColor="@color/colorTextOrange"
                    android:textSize="18sp" />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

            <RelativeLayout
                android:id="@+id/frameLayout4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorFrameBackground"
                android:padding="10dp">

                <TextView
                    android:id="@+id/editText12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_toLeftOf="@id/editText_harga_barang"
                    android:padding="1dp"
                    android:text="Harga (Barang)"
                    android:textColor="@color/colorTextGreen"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/editText_harga_barang"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/editText12"
                    android:padding="1dp"
                    android:text="Rp. 12.000"
                    android:textColor="@color/colorTextOrange"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/editText12"
                    android:layout_below="@+id/editText12"
                    android:layout_toLeftOf="@id/editText_harga_pengiriman"
                    android:padding="1dp"
                    android:text="Biaya Pegiriman"
                    android:textColor="@color/colorTextGreen"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/editText_harga_pengiriman"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/editText_harga_barang"
                    android:layout_below="@+id/editText12"
                    android:padding="1dp"
                    android:text="Rp. 3000"
                    android:textColor="@color/colorTextOrange"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editText_total_harga"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignLeft="@+id/editText12"
                    android:layout_marginBottom="0dp"
                    android:layout_toLeftOf="@id/editText_total"
                    android:padding="1dp"
                    android:paddingTop="60dp"
                    android:text="Total"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/editText_total"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/editText_harga_barang"
                    android:layout_alignParentBottom="true"
                    android:padding="1dp"
                    android:text="Rp. 15.000"
                    android:textColor="@color/colorTextOrange"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_alignRight="@+id/editText_harga_barang" />

            </RelativeLayout>
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:id="@+id/frameLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="55dp"
                android:layout_marginLeft="55dp"
                >

                <Button
                    android:id="@+id/button_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_custom"
                    android:text="Order"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>